staging/pesbuk/pesbuk-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pesbuk
  namespace: pesbuk-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pesbuk
      metadata: pesbuk
  template:
    metadata:
      labels:
        name: pesbuk
        metadata: pesbuk
    spec:
      containers:
      - name: pesbuk
        image: hegiwibowo/pesbuk-with-secret-staging:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pesbuk
  namespace: pesbuk-staging
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: pesbuk
---
